--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -165,8 +165,8 @@
     <string name="camera">Camera</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Titel</string>
-    <string name="gps_coordinates">GPS coordinates</string>
-    <string name="altitude">Altitude</string>
+    <string name="gps_coordinates">GPS-coördinaten</string>
+    <string name="altitude">Hoogte</string>
 
     <!-- Color customization -->
     <string name="background_color">Achtergrondkleur</string>
