adding some new strings related to navigation bar color customization

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">لون أيقونة التطبيق</string>
     <string name="bottom_navigation_bar_color">لون شريط التنقل السفلي</string>
     <string name="restore_defaults">استعادة الضبط الافتراضي</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">تغيير اللون</string>
     <string name="theme">المظهر</string>
     <string name="changing_color_description">سوف يؤدي تغيير اللون إلى الانتقال للمظهر المخصص</string>
