--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Tətbiq ikonu rəngi</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Standarta qaytar</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Rəngi dəyiş</string>
     <string name="theme">Mövzu</string>
     <string name="changing_color_description">Rəngi dəyişmək onu Özəl mövzuya çevirəcək</string>
