--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -179,6 +179,8 @@
     <string name="app_icon_color">Barva ikony aplikace</string>
     <string name="bottom_navigation_bar_color">Barva spodní navigační lišty</string>
     <string name="restore_defaults">Obnovit výchozí</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Změnit barvu</string>
     <string name="theme">Motiv</string>
     <string name="changing_color_description">Změna barvy změní motiv na Vlastní</string>
