--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -188,6 +188,8 @@
     <string name="app_icon_color">Lliw eicon yr ap</string>
     <string name="bottom_navigation_bar_color">Lliw bar llywio gwaelod</string>
     <string name="restore_defaults">Adfer rhagosodiadau</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Newid lliw</string>
     <string name="theme">Thema</string>
     <string name="changing_color_description">Bydd newid lliw yn achosi newid i\'r thema addasedig</string>
