--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Χρώμα εικονιδίου εφαρμογής</string>
     <string name="bottom_navigation_bar_color">Χρώμα κάτω γραμμής Πλοήγησης</string>
     <string name="restore_defaults">Επαναφορά προεπιλογών</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Αλλαγή χρώματος</string>
     <string name="theme">Θέμα</string>
     <string name="changing_color_description">Η αλλαγή ενός χρώματος θα αλλάξει το Προσαρμοσμένο θέμα</string>
