--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Sovelluksen ikonin väri</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Palauta oletukset</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Change color</string>
     <string name="theme">Teema</string>
     <string name="changing_color_description">Värin vaihtaminen vaihtaa teemaksi "Oma teema"</string>
