--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Couleur de l\'icône de l\'application</string>
     <string name="bottom_navigation_bar_color">Couleur de la barre de navigation</string>
     <string name="restore_defaults">Restaurer les valeurs par défaut</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Modifier la couleur</string>
     <string name="theme">Thème</string>
     <string name="changing_color_description">Modifier une couleur renomme le thème en \"Personnalisé\"</string>
