--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Alkalmazás ikon színe</string>
     <string name="bottom_navigation_bar_color">Alsó navigációs sáv színe</string>
     <string name="restore_defaults">Alapértelmezések visszaállítása</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Szín változtatása</string>
     <string name="theme">Téma</string>
     <string name="changing_color_description">A szín megváltoztatásával átvált az Egyéni témára</string>
