--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -173,6 +173,8 @@
     <string name="app_icon_color">Warna ikon aplikasi</string>
     <string name="bottom_navigation_bar_color">Warna bilah navigasi bawah</string>
     <string name="restore_defaults">Kembalikan ke default</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Ubah warna</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Mengubah warna akan mengalihkannya ke tema Khusus</string>
