--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Colore dell\'icona app</string>
     <string name="bottom_navigation_bar_color">Colore della barra di navigazione</string>
     <string name="restore_defaults">Ripristina predefiniti</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Cambia colore</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Modificando un colore, il tema diventerà personale</string>
