--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Programėlės ikonėlės spalva</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Atstatyti</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Change color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Keičiant temą bus perjungta į pasirinktiną temą</string>
