--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -177,6 +177,8 @@
     <string name="app_icon_color">Ikona aplikacji</string>
     <string name="bottom_navigation_bar_color">Dolny pasek nawigacyjny</string>
     <string name="restore_defaults">Przywróć domyślne</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Zmień kolor</string>
     <string name="theme">Motyw</string>
     <string name="changing_color_description">Zmiana koloru spowoduje przełączenie motywu na własny</string>
