--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -179,6 +179,8 @@
     <string name="app_icon_color">Цвет значка приложения</string>
     <string name="bottom_navigation_bar_color">Цвет нижней панели навигации</string>
     <string name="restore_defaults">Сбросить к стандартным</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Изменить цвет</string>
     <string name="theme">Тема</string>
     <string name="changing_color_description">Изменение цвета повлечёт переключение на пользовательскую тему.</string>
