--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -179,6 +179,8 @@
     <string name="app_icon_color">Farba spúšťacej ikonky apky</string>
     <string name="bottom_navigation_bar_color">Farba spodnej navigačnej lišty</string>
     <string name="restore_defaults">Obnoviť predvolené</string>
+    <string name="use_default">Použiť predvolenú</string>
+    <string name="default_color">Predvolená</string>
     <string name="change_color">Zmeniť farbu</string>
     <string name="theme">Téma</string>
     <string name="changing_color_description">Zmena farby spôsobí prepnutie na Vlastnú tému</string>
