--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -175,6 +175,8 @@
     <string name="app_icon_color">Боја иконе апликације</string>
     <string name="bottom_navigation_bar_color">Боја доње навигационе линије</string>
     <string name="restore_defaults">Врати на подразумевана подешавања</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Промени боју</string>
     <string name="theme">Тема</string>
     <string name="changing_color_description">Изменом боје започињете прилагођену тему</string>
