--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Appikonens färg</string>
     <string name="bottom_navigation_bar_color">Navigeringsfältets färg</string>
     <string name="restore_defaults">Återställ standardfärger</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Ändra färg</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Om du ändrar en färg, ändras temat till anpassat tema</string>
