--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">Колір піктограми додатка</string>
     <string name="bottom_navigation_bar_color">Колір нижньої навігаційної панелі</string>
     <string name="restore_defaults">Відновити стандартні параметри</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Змінити колір</string>
     <string name="theme">Тема</string>
     <string name="changing_color_description">Зміна кольору увімкне Користувацьку тему</string>
