--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -173,6 +173,8 @@
     <string name="app_icon_color">應用程式圖標顏色</string>
     <string name="bottom_navigation_bar_color">底部導航列顏色</string>
     <string name="restore_defaults">恢復預設</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">改變顏色</string>
     <string name="theme">主題</string>
     <string name="changing_color_description">改變顏色將切換成[自訂]主題</string>
