--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -179,6 +179,8 @@
     <string name="app_icon_color">Boja ikone aplikacije</string>
     <string name="bottom_navigation_bar_color">Boja donje navigacijske trake</string>
     <string name="restore_defaults">Vrati zadano</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Promijeni boju</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Promijenom boje, prelazi se na Prilagođenu temu</string>
