--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -173,6 +173,8 @@
     <string name="app_icon_color">App icon color</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">기본설정으로 변경</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Change color</string>
     <string name="theme">테마</string>
     <string name="changing_color_description">주요 색상(테마)을 변경하면 사용자정의 테마로 전환됩니다.</string>
