--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -175,6 +175,8 @@
     <string name="app_icon_color">Cor do ícone do aplicativo</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Restaurar predefinições</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Mudar cor</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Mudança nas cores irá alternar para um tema personalizado</string>
