--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -181,6 +181,8 @@
     <string name="app_icon_color">Barva ikone aplikacije</string>
     <string name="bottom_navigation_bar_color">Barva spodnje navigacijske vrstice</string>
     <string name="restore_defaults">Ponastavi na privzeto</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Spremeni barvo</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Spreminjanje barve bo preklopilo na temo po meri</string>
