--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -176,6 +176,8 @@
     <string name="app_icon_color">App icon color</string>
     <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
     <string name="restore_defaults">Restore defaults</string>
+    <string name="use_default">Use default</string>
+    <string name="default_color">Default</string>
     <string name="change_color">Change color</string>
     <string name="theme">Theme</string>
     <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
