--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -176,8 +176,8 @@
     <string name="app_icon_color">Color del icono de la aplicación</string>
     <string name="bottom_navigation_bar_color">Color de la barra de navegación inferior</string>
     <string name="restore_defaults">Valores por defecto</string>
-    <string name="use_default">Use default</string>
-    <string name="default_color">Default</string>
+    <string name="use_default">Usar por defecto</string>
+    <string name="default_color">Por defecto</string>
     <string name="change_color">Cambiar de color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Cambiar un color hará que cambie a tema personalizado</string>
