--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -165,8 +165,8 @@
     <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
     <string name="song_title">Låttitel</string>
-    <string name="gps_coordinates">GPS coordinates</string>
-    <string name="altitude">Altitude</string>
+    <string name="gps_coordinates">GPS-koordinater</string>
+    <string name="altitude">Höjd över havet</string>
 
     <!-- Color customization -->
     <string name="background_color">Bakgrundsfärg</string>
@@ -176,8 +176,8 @@
     <string name="app_icon_color">Appikonens färg</string>
     <string name="bottom_navigation_bar_color">Navigeringsfältets färg</string>
     <string name="restore_defaults">Återställ standardfärger</string>
-    <string name="use_default">Use default</string>
-    <string name="default_color">Default</string>
+    <string name="use_default">Använd standard</string>
+    <string name="default_color">Standard</string>
     <string name="change_color">Ändra färg</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Om du ändrar en färg, ändras temat till anpassat tema</string>
@@ -565,11 +565,11 @@
     <string name="sunday_short">Sön</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s. If you download it till then, you will be able to use it for free forever.</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
-    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
+    <string name="upgrade_to_pro_long">Den här versionen av appen underhålls inte längre. Uppgradera till Pro-versionen.</string>
+    <string name="it_is_free">Den är gratis fram till: %s. Om du hämtar den innan dess, kan du använda den kostnadsfritt för all framtid.</string>
+    <string name="more_info">Mer information</string>
+    <string name="upgrade">Uppgradera</string>
+    <string name="upgrade_calendar">Lokalt sparade händelser kan bara migreras manuellt genom att exportera och importera dem till och från en .ics-fil. Du hittar knappar för både export och import i huvudvymenyn.</string>
 
     <!-- About -->
     <string name="about">Om</string>
@@ -587,7 +587,7 @@
     <string name="donate_underlined"><u>Donera</u></string>
     <string name="follow_us">Följ oss</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="additional_info">Ytterligare info</string>
+    <string name="additional_info">Ytterligare information</string>
     <string name="app_version">Appversion: %s</string>
     <string name="device_os">Enhetens operativsystem: %s</string>
     <string name="donate_please">
