--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -64,6 +64,7 @@
     <string name="source_file_doesnt_exist">Kök faylı %s yoxdur</string>
     <string name="prepend_filenames">Prepend filenames</string>
     <string name="append_filenames">Append filenames</string>
+    <string name="simple_renaming">Simple renaming</string>
     <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
 
     <!-- Copy / Move -->
