--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -64,6 +64,7 @@
     <string name="source_file_doesnt_exist">Berkas sumber %s tidak ada</string>
     <string name="prepend_filenames">Tambah akhiran nama berkas</string>
     <string name="append_filenames">Tambah awalan nama berkas</string>
+    <string name="simple_renaming">Simple renaming</string>
     <string name="rename_date_time_pattern">%Y - tahun\n%M - bulan\n%D - hari\n%h - jam\n%m - menit\n%s - detik</string>
 
     <!-- Copy / Move -->
