--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -64,6 +64,7 @@
     <string name="source_file_doesnt_exist">ソースファイル %s が存在しません</string>
     <string name="prepend_filenames">ファイル名の前に追加</string>
     <string name="append_filenames">ファイル名の後に追加</string>
+    <string name="simple_renaming">Simple renaming</string>
     <string name="rename_date_time_pattern">%Y - year\n%M - month\n%D - day\n%h - hour\n%m - minute\n%s - second</string>
 
     <!-- Copy / Move -->
