--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -65,6 +65,7 @@
     <string name="prepend_filenames">Προεπιλεγμένα ονόματα αρχείων</string>
     <string name="append_filenames">Προσθέστε ονόματα αρχείων</string>
     <string name="simple_renaming">Simple renaming</string>
+    <string name="pattern_renaming">Pattern</string>
     <string name="rename_date_time_pattern">%Y - έτος\n%M - μήνας\n%D - ημέρα\n%h - ώρα\n%m - λεπτό\n%s - δευτ/το</string>
 
     <!-- Copy / Move -->
