--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -65,6 +65,7 @@
     <string name="prepend_filenames">Adicionar ao início dos nomes</string>
     <string name="append_filenames">Adicionar ao fim dos nomes</string>
     <string name="simple_renaming">Simple renaming</string>
+    <string name="pattern_renaming">Pattern</string>
     <string name="rename_date_time_pattern">%Y - ano\n%M - mês\n%D - dia\n%h - hora\n%m - minuto\n%s - segundo</string>
 
     <!-- Copy / Move -->
