--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -65,6 +65,7 @@
     <string name="prepend_filenames">Перед именем файла</string>
     <string name="append_filenames">После имени файла</string>
     <string name="simple_renaming">Simple renaming</string>
+    <string name="pattern_renaming">Pattern</string>
     <string name="rename_date_time_pattern">%Y - год\n%M - месяц\n%D - день\n%h - час\n%m - минута\n%s - секунда</string>
 
     <!-- Copy / Move -->
