--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -65,6 +65,7 @@
     <string name="prepend_filenames">Pridať pred názvy súborov</string>
     <string name="append_filenames">Pridať za názvy súborov</string>
     <string name="simple_renaming">Jednoduché premenovanie</string>
+    <string name="pattern_renaming">Vzor</string>
     <string name="rename_date_time_pattern">%Y - rok\n%M - mesiac\n%D - deň\n%h - hodina\n%m - minúta\n%s - sekunda</string>
 
     <!-- Copy / Move -->
