--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -66,6 +66,7 @@
     <string name="append_filenames">Fájlnevek csatolása</string>
     <string name="simple_renaming">Simple renaming</string>
     <string name="pattern_renaming">Pattern</string>
+    <string name="string_to_add">String to add</string>
     <string name="rename_date_time_pattern">%É - év\\n%H - hónap\\n%N - nap\\n%ó - óra\\n%p - perc\\n%mp - másodperc</string>
 
     <!-- Copy / Move -->
