--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -66,6 +66,7 @@
     <string name="append_filenames">Lägg till efter filnamnen</string>
     <string name="simple_renaming">Simple renaming</string>
     <string name="pattern_renaming">Pattern</string>
+    <string name="string_to_add">String to add</string>
     <string name="rename_date_time_pattern">%Y - år\n%M - månad\n%D - dag\n%h - timme\n%m - minut\n%s - sekund</string>
 
     <!-- Copy / Move -->
