--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -64,9 +64,9 @@
     <string name="source_file_doesnt_exist">Bronbestand %s bestaat niet</string>
     <string name="prepend_filenames">Voor bestandsnaam</string>
     <string name="append_filenames">Na bestandsnaam</string>
-    <string name="simple_renaming">Simple renaming</string>
-    <string name="pattern_renaming">Pattern</string>
-    <string name="string_to_add">String to add</string>
+    <string name="simple_renaming">Eenvoudig hernoemen</string>
+    <string name="pattern_renaming">Patroon</string>
+    <string name="string_to_add">Tekens toevoegen</string>
     <string name="rename_date_time_pattern">%Y - jaar\n%M - maand\n%D - dag\n%h - uur\n%m - minuut\n%s - seconde</string>
 
     <!-- Copy / Move -->
