--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">Nepodarilo sa vytvoriť priečinok %s</string>
     <string name="could_not_create_file">Nepodarilo sa vytvoriť súbor %s</string>
     <string name="no_new_items">Nenašli sa žiadne nové položky</string>
+    <string name="no_space">V cieľovom priečinku nie je dostatok miesta</string>
 
     <!-- Create new -->
     <string name="create_new">Vytvoriť nový</string>
