--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">Не вдалося створити теку %s</string>
     <string name="could_not_create_file">Не вдалося створити файл %s</string>
     <string name="no_new_items">Не знайдено нових елементів</string>
+    <string name="no_space">The destination does not have enough space available</string>
 
     <!-- Create new -->
     <string name="create_new">Створити новий</string>
