--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">無法建立資料夾 %s</string>
     <string name="could_not_create_file">無法建立檔案 %s</string>
     <string name="no_new_items">未發現新的項目</string>
+    <string name="no_space">The destination does not have enough space available</string>
 
     <!-- Create new -->
     <string name="create_new">新增</string>
