--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">Methwyd â chreu\'r ffolder %s</string>
     <string name="could_not_create_file">Methwyd â chreu\'r ffeil %s</string>
     <string name="no_new_items">No new items have been found</string>
+    <string name="no_space">The destination does not have enough space available</string>
 
     <!-- Create new -->
     <string name="create_new">Creu newydd</string>
