--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">Tidak bisa membuat folder %s</string>
     <string name="could_not_create_file">Tidak bisa membuat berkas %s</string>
     <string name="no_new_items">Tidak ada item baru yang ditemukan</string>
+    <string name="no_space">The destination does not have enough space available</string>
 
     <!-- Create new -->
     <string name="create_new">Buat baru</string>
