--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">Impossibile creare la cartella %s</string>
     <string name="could_not_create_file">Impossibile creare il file %s</string>
     <string name="no_new_items">No new items have been found</string>
+    <string name="no_space">The destination does not have enough space available</string>
 
     <!-- Create new -->
     <string name="create_new">Crea nuovo</string>
