--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">フォルダ %s を作成できません</string>
     <string name="could_not_create_file">ファイル %s を作成できません</string>
     <string name="no_new_items">No new items have been found</string>
+    <string name="no_space">The destination does not have enough space available</string>
 
     <!-- Create new -->
     <string name="create_new">新規作成</string>
