--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -95,6 +95,7 @@
     <string name="could_not_create_folder">%s 폴더 생성에 실패함</string>
     <string name="could_not_create_file">%s 파일 생성에 실패함</string>
     <string name="no_new_items">No new items have been found</string>
+    <string name="no_space">The destination does not have enough space available</string>
 
     <!-- Create new -->
     <string name="create_new">새로 만들기</string>
