--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -95,7 +95,7 @@
     <string name="could_not_create_folder">Ei voitu luoda kansiota %s</string>
     <string name="could_not_create_file">Ei voitu luoda tiedostoa %s</string>
     <string name="no_new_items">No new items have been found</string>
-    <string name="no_space">The destination does not have enough space available</string>
+    <string name="no_space">The destination does not have enough space available.\nRequired %1$s, available %2$s</string>
 
     <!-- Create new -->
     <string name="create_new">Luo uusi</string>
