--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -95,7 +95,7 @@
     <string name="could_not_create_folder">Αδύνατη η δημιουργία του φακέλου %s</string>
     <string name="could_not_create_file">Αδύνατη η δημιουργία του αρχείου %s</string>
     <string name="no_new_items">Δεν βρέθηκαν νέα στοιχεία</string>
-    <string name="no_space">The destination does not have enough space available.\nRequired %1$s, available %2$s</string>
+    <string name="no_space">Ο προορισμός που επιλέξατε δεν διαθέτει τον απαιτούμενο χώρο.\nΑπαιτείται %1$s, διαθέσιμα %2$s</string>
 
     <!-- Create new -->
     <string name="create_new">Δημιουργία νέου</string>
